# devkit

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
carlanomaly/: __init__.py  download.py  evaluator.py  index.py
carlanomaly/datasets/: __init__.py  _base.py  actions.py  anomaly_lidar.py  anomaly_obs.py  anomaly_seg.py  camera.py  collisions.py  depth.py  gnss.py  imu.py  joint.py  lidar.py  pointcloud.py  rgb.py  segmentation.py  weather.py
docs/: Makefile  conf.py  index.rst
docs/api/: core.rst  datasets.rst  download.rst  evaluator.rst
tests/: test_datasets_download.py  test_evaluator.py
